fixed sinc signal equation

--- a/Nachrichtentechnik.tex
+++ b/Nachrichtentechnik.tex
@@ -319,7 +319,7 @@ Quantisierungsfehler: $\vec q (\vec x) = \vec x_Q - \vec x = s_i - x$
 		\includegraphics{./img/FT/cos2_t.pdf} \hfill \includegraphics{./img/FT/cos2_f.pdf}
 
 		\subsubsection{$\sinc$-Impuls: $\sinc(x) = \si(\pi x)$}
-		$g(t) = \frac{\sin (\pi \frac t T)}{\pi \frac t  T}\sinc\left(\frac{t}{T}\right)$ \hfill
+		$g(t) = \frac{\sin (\pi \frac t T)}{\pi \frac t  T} = \sinc\left(\frac{t}{T}\right)$ \hfill
 		$G(f) = \begin{cases}
 			T, &\text{ für } \abs{f} < \frac{1}{2T}\\
 			\frac T 2 , &\text{ für } \abs{f} = \frac{1}{2T}\\
@@ -370,7 +370,7 @@ Quantisierungsfehler: $\vec q (\vec x) = \vec x_Q - \vec x = s_i - x$
 
 	$\eta = \frac{\text{Übertragungsrate}}{\text{NF Bandbreite}}$ \qquad $\unitof{\eta} = \frac{\si{bit/s}}{\si{\hertz}}$
 
-	Beispiel GSM: $\eta = 0.88 \si{\kilo \bit/s \per \hertz}$, \quad LTE: $\eta = \frac{3 \si{Gbit/s}}{100 \si{\mega \hertz}} = 30$\\
+	Beispiel GSM: $\eta = 0.88 \frac{\si{kbit/s}}{\si{\hertz}}$, \quad LTE: $\eta = \frac{3 \si{Gbit/s}}{100 \si{\mega \hertz}} = 30$\\
 }
 
 
