Added latex4ei package

--- a/Nachrichtentechnik.tex
+++ b/Nachrichtentechnik.tex
@@ -20,6 +20,7 @@
 \usepackage{tikz}				% Alle möglichen Zeichnungen
 
 \sisetup{per-mode = fraction}
+\titleformat{\subsubsection}{\normalsize\bfseries}{\thesubsubsection.\ }{0pt}{}
 
 %---------------------------------------%
 %			Nachrichtentechnik 			%
