Fixed convolution equation

--- a/Nachrichtentechnik.tex
+++ b/Nachrichtentechnik.tex
@@ -464,7 +464,7 @@ $\int \limits_{-\infty}^{\infty} \PSD_{\X}(f) \diff f = \ACF_{\X}(0) = \Var[\X] 
 % ============================================================================================
 
 
-$r(f) = h(t) * s(t)$ \qquad $R(f) = H(f) \cdot S(f)$\\
+$r(t) = h(t) * s(t)$ \qquad $R(f) = H(f) \cdot S(f)$\\ 
 Verzerrungsfrei: $h(t) = h_0 \dirac(t-t_0)$ \qquad $H(f) = h_0 e^{-\i 2 \pi f t_0}$
 
 
