--- a/Nachrichtentechnik.tex
+++ b/Nachrichtentechnik.tex
@@ -158,6 +158,8 @@ Quantisierungsfehler: $\vec q (\vec x) = \vec x_Q - \vec x = s_i - x$
 	\subsection{Lineare Quantisierung}
 	Spezialfall der skalaren Quantisierung mit gleich großen Quantisierungsintervallen $\Delta$.
 	
+	% TODO: Quantisierungskennlinie einfügen (Beispiel: http://home.arcor.de/rachid.nouna/Telekommunikation/Grundlagen-Dateien/image005.jpg links)
+	
 	\pbox{4cm}{\includegraphics{./img/pdf_quantization.pdf}} \ \pbox{4cm}{\includegraphics{./img/pdf_quantization_error.pdf}} \
 	\pbox{4cm}{\includegraphics{./img/quantization_error.pdf}}\\
 	\emphbox{Es gilt für PDF: $\int\limits_{-\infty}^\infty f_{\X}(x) \diff x \stackrel{!}{=} 1$}
